--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path_provider: ^2.0.11
   settings_ui: ^2.0.2
   provider: ^6.0.5
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test:
