--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   hive_flutter: ^1.1.0
   json_serializable: ^6.5.4
   json_annotation: ^4.7.0
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
