--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   json_serializable: ^6.5.4
   json_annotation: ^4.7.0
   url_launcher: ^6.1.7
+  version: ^3.0.2
 
 dev_dependencies:
   flutter_test:
