--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   json_annotation: ^4.7.0
   url_launcher: ^6.1.7
   version: ^3.0.2
+  logger: ^1.1.0
 
 dev_dependencies:
   flutter_test:
