--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.1.7
   version: ^3.0.2
   logger: ^1.1.0
+  file_picker: ^5.2.4
 
 dev_dependencies:
   flutter_test:
