--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   collection: ^1.17.0
   path: ^1.8.3
   uuid: ^3.0.7
+  flutter_screenutil: ^5.6.0
 
 dev_dependencies:
   flutter_test:
