--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ flutter:
   assets:
      - assets/
      - assets/soundpack/default/
+     - assets/soundpack/default_long_tone/
      - assets/soundpack/classic/
 
   # An image asset can refer to one or more resolution-specific "variants", see
