--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   package_info_plus: ^3.0.2
   auto_animated: ^3.1.0
   dio: ^4.0.6
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
