--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   auto_animated: ^3.1.0
   dio: ^4.0.6
   flutter_staggered_grid_view: ^0.6.2
+  sanitize_filename: ^1.0.4
+  quiver: ^3.2.1
 
 dev_dependencies:
   flutter_test:
