--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   sanitize_filename: ^1.0.4
   quiver: ^3.2.1
+  share_plus: ^6.3.0
 
 dev_dependencies:
   flutter_test:
