--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   share_plus: ^6.3.0
   image_picker: ^0.8.6
   flutter_svg: ^1.1.6
+  easy_localization: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -100,6 +101,7 @@ flutter:
      - assets/soundpack/default_long_tone/
      - assets/soundpack/classic/
      - assets/img/
+     - assets/l10n/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
