Change the `baseHref` in GitHub Page.

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: bluefireteam/flutter-gh-pages@v7
         with:
           workingDir: calcupiano
-          baseHref: /calcupiano/
+          baseHref: /CalcuPiano/
