Extract `platform` to `https://github.com/liplum/DartPackage/tree/master/platform_safe_func`

--- a/calcupiano/pubspec.yaml
+++ b/calcupiano/pubspec.yaml
@@ -77,6 +77,10 @@ dependencies:
     git:
       url: https://github.com/liplum/DartPackage.git
       path: jconverter
+  platform_safe_func:
+    git:
+      url: https://github.com/liplum/DartPackage.git
+      path: platform_safe_func
 dev_dependencies:
   flutter_test:
     sdk: flutter
