--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4 # Only works with v2
-      - uses: subosito/flutter-action@v2
-      - uses: bluefireteam/flutter-gh-pages@v8
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4 # Only works with v2
+      - uses: subosito/flutter-action@44ac965b96f18d999802d4b807e3256d5a3f9fa1 # v2
+      - uses: bluefireteam/flutter-gh-pages@57815b17b371455ec1a98f075b71b4c6ba0a938c # v8
         with:
           workingDir: calcupiano
           baseHref: /CalcuPiano/
