--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4 # Only works with v2
       - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: 3.22.3
       - uses: bluefireteam/flutter-gh-pages@v8
         with:
           workingDir: calcupiano
