--- a/calcupiano/pubspec.yaml
+++ b/calcupiano/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   path: ^1.8.2
   uuid: ^4.4.2
   flutter_screenutil: ^5.9.0
-  package_info_plus: ^8.0.0
+  package_info_plus: ^8.0.2
   auto_animated: ^3.1.0
   dio: ^5.5.0+1
   flutter_staggered_grid_view: ^0.7.0
@@ -72,7 +72,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   easy_localization: ^3.0.1
   markdown: ^7.2.2
-  flutter_markdown: ^0.7.3
+  flutter_markdown: ^0.7.3+1
   unicons: ^2.1.0
   google_fonts: ^6.2.1
   jconverter:
