--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -4,15 +4,19 @@ on:
   push:
     branches: [ master ]
 
+permissions: write-all
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4 # Only works with v2
+      - uses: actions/checkout@v4
+
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: 3.24.3
+
       - uses: bluefireteam/flutter-gh-pages@v8
         with:
           baseHref: /CalcuPiano/
